<resources>
    <string name="app_name">TMDb</string>
    <string name="home_name">Home</string>
    <string name="explore_name">Explore</string>
    <string name="see_more_name">See More</string>
    <string name="details_name">Details</string>
    <string name="similar_movies">Similar movies</string>
    <string name="year">year</string>
    <string name="duration">duration</string>
    <string name="rating">rating</string>
    <string name="introduction">Introduction</string>
    <string name="trailer">Trailer</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="none_info">--/--</string>
    <string name="latest">Latest</string>
    <string name="genres">Genres</string>
    <string name="order_by">Order by</string>
    <string name="search_name">Search</string>
    <string name="filters">Filters</string>
    <string name="apply_filters">Apply filters</string>
    <string name="not_found_msg">No Results Found</string>
    <string name="retry">retry</string>
    <string name="no_internet_connection_error">No Internet Connection</string>
    <string name="watch_more">Watch more</string>
    <string name="see_more">See more</string>
    <string name="trending">Trending</string>
    <string name="saved_name">Saved</string>
    <string name="watchlist_main_msg">Keep track of what you want to watch</string>
    <string name="watchlist_sub_msg">Create your collection of worthy movies</string>
</resources>