<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.tmdb.ui.fragments.home.HomeFragment"
        android:label="@string/home_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/get_movie_details_action"
            app:destination="@id/movie_details_fragment" />

        <action
            android:id="@+id/get_see_more_action"
            app:destination="@id/see_more_fragment" />
    </fragment>

    <fragment
        android:id="@+id/see_more_fragment"
        android:name="com.example.tmdb.ui.fragments.seemore.SeeMoreFragment"
        android:label="@string/see_more_name"
        tools:layout="@layout/fragment_see_more">
        <action
            android:id="@+id/get_movie_details_action"
            app:destination="@id/movie_details_fragment" />
        <argument
            android:name="category"
            app:argType="com.example.tmdb.constants.HomeCategory" />
    </fragment>

    <fragment
        android:id="@+id/explore_fragment"
        android:name="com.example.tmdb.ui.fragments.explore.ExploreFragment"
        android:label="@string/explore_name"
        tools:layout="@layout/fragment_explore">
        <action
            android:id="@+id/get_movie_details_action"
            app:destination="@id/movie_details_fragment" />
    </fragment>

    <fragment
        android:id="@+id/movie_details_fragment"
        android:name="com.example.tmdb.ui.fragments.moviedetails.MovieDetailsFragment"
        android:label="@string/details_name"
        tools:layout="@layout/fragment_movie_details">
        <action
            android:id="@+id/get_movie_details_action"
            app:destination="@id/movie_details_fragment" />
        <argument
            android:name="movie_id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/saved_fragment"
        android:name="com.example.tmdb.ui.fragments.saved.SavedFragment"
        android:label="@string/saved_name"
        tools:layout="@layout/fragment_see_more">
        <action
            android:id="@+id/get_movie_details_action"
            app:destination="@id/movie_details_fragment" />
    </fragment>

</navigation>